Made the text a bit smaller to avoid overflow on smaller devices

--- a/css/index.css
+++ b/css/index.css
@@ -226,12 +226,13 @@ pre {
 }
 
 .tmpl-home h1 {
-  font-size: 6rem;
+  font-size: 4.1rem;
   margin-bottom: 1rem;
 }
 
 @supports(((background-clip: text) or (-webkit-background-clip: text)) and (-webkit-text-fill-color: transparent)) {
   .tmpl-home h1 {
+    -webkit-background-attachment: fixed;
     background-attachment: fixed;
     -webkit-background-clip: text;
     background-clip: text;
